fixed dependency and WRNINGs